# LanqiDoctor_ICAN

./: .gitignore  MIGRATION_CHANGES.md  PERMISSION_MANAGEMENT_GUIDE.md  QWEN_INTEGRATION_GUIDE.md  build.gradle  common.gradle  configs.gradle  gradle.properties  settings.gradle
app/: UI_BEAUTIFICATION_GUIDE.md  build.gradle  lint.xml  proguard-app.pro  proguard-rules.pro  实际应用美化完成说明.md
app/preview/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: network_config.json
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.backup  Native.cc  llm_bluelm.cpp  native-lib.cpp  pipeline.cc  pipeline.h
app/src/main/java/com/lanqiDoctor/demo/View/: CalendarView.java
app/src/main/java/com/lanqiDoctor/demo/action/: StatusAction.java  TitleBarAction.java  ToastAction.java
app/src/main/java/com/lanqiDoctor/demo/ai/: AiChatManager.java
app/src/main/java/com/lanqiDoctor/demo/aop/: CheckNet.java  CheckNetAspect.java  Log.java  LogAspect.java  Permissions.java  PermissionsAspect.java  SingleClick.java  SingleClickAspect.java
app/src/main/java/com/lanqiDoctor/demo/app/: AppActivity.java  AppAdapter.java  AppApplication.java  AppFragment.java  TitleBarFragment.java
app/src/main/java/com/lanqiDoctor/demo/common/: AppCompatPreferenceActivity.java  CameraSurfaceView.java  SDKExceptions.java  Utils.java
app/src/main/java/com/lanqiDoctor/demo/config/: AiConfig.java  IRequestApi.json  NetworkConfig.java
app/src/main/java/com/lanqiDoctor/demo/dao/: ChatSessionDao.java
app/src/main/java/com/lanqiDoctor/demo/dao/converter/: ChatMessageListConverter.java
app/src/main/java/com/lanqiDoctor/demo/database/: AppDatabase.java  DatabaseHelper.java
app/src/main/java/com/lanqiDoctor/demo/database/dao/: HabitDao.java  (+4 more)
app/src/main/java/com/lanqiDoctor/demo/entity/: ChatSession.java
app/src/main/java/com/lanqiDoctor/demo/manager/: ActivityManager.java  CacheDataManager.java  ChatHistoryManager.java  CloudSyncManager.java  DatabaseManager.java  DialogManager.java  FamilyMemberManager.java  HabitAlarmManager.java  InputTextManager.java  MedicationAlarmManager.java  PickerLayoutManager.java  RealtimeDialogManager.java  RecipeManager.java  ThreadPoolManager.java  TodayMedicationManager.java  UserStateManager.java  VivoHealthManager.java
app/src/main/java/com/lanqiDoctor/demo/model/: Day.java  FamilyMember.java  Recipe.java  TodayMedicationItem.java  WeeklyRecipePlan.java
app/src/main/java/com/lanqiDoctor/demo/ocr/: MedicationInfo.java  Native.java  OCRActivity.java  PrescriptionAnalysisActivity.java  PrescriptionAnalyzer.java
app/src/main/java/com/lanqiDoctor/demo/other/: AppConfig.java  ArrowDrawable.java  CrashHandler.java  DebugLoggerTree.java  DoubleClickHelper.java  GridSpaceDecoration.java  KeyboardWatcher.java  MaterialHeader.java  PermissionCallback.java  SmartBallPulseFooter.java  TitleBarStyle.java  ToastLogInterceptor.java  ToastStyle.java
app/src/main/java/com/lanqiDoctor/demo/test/: QwenApiTest.java
app/src/main/java/com/lanqiDoctor/demo/util/: CalendarUtil.java  ChatLlmUtil.java  EmailValidator.java  LoginCheckUtil.java  NetworkErrorHandler.java
app/src/main/java/com/lanqiDoctor/demo/widget/: BrowserView.java  PasswordView.java  PhotoViewPager.java  PlayerView.java  StatusLayout.java  XCollapsingToolbarLayout.java
app/src/main/java/com/lanqiDoctor/demo/wxapi/: WXEntryActivity.java
app/src/main/res/drawable/: assessment_ic.xml  bedtime_ic.xml  bg_button_gray.xml  bg_button_primary.xml  bg_calendar_card.xml  bg_calendar_day.xml  bg_calendar_day_new.xml  bg_calendar_other_month.xml  bg_calendar_today.xml  bg_calendar_today_card.xml  bg_calories_tag.xml  bg_chat_ai_message.xml  bg_chat_user_message.xml  bg_permission_status.xml  bg_time_tag.xml  border_rounded.xml  btn_switch_default.xml  btn_switch_pressed.xml  button_outline_bg.xml  button_outline_selector.xml  button_prev_next.xml  button_prev_next_pressed.xml  button_primary_background.xml  button_selector.xml  calendar_ic.xml  chat_selected.xml  chat_unselected.xml  circle_blue_background.xml  circle_pink_background.xml  cloud_button_blue.xml  cloud_button_green.xml  cloud_button_orange.xml  cloud_button_teal.xml  diagnosis_ic.xml  dialog_background.xml  directions_walk_ic.xml  edit_focused.xml  edit_ic.xml  edit_normal.xml  edittext_background.xml  (+64 more)
app/src/main/res/layout/: about_activity.xml  activity_add_habit.xml  activity_add_medical_history.xml  activity_chat_with_history.xml  activity_family_health_daily.xml  activity_habit_ai_recommendation.xml  activity_habit_building.xml  activity_habit_detail.xml  activity_health_profile.xml  activity_main.xml  activity_medical_history.xml  activity_medical_history_detail.xml  activity_medical_report.xml  activity_mobile_health_daily.xml  activity_my_recipes.xml  activity_ocr_new.xml  activity_prescription_analysis.xml  activity_private.xml  activity_today_eat.xml  add_family_member_activity.xml  add_medication_activity.xml  address_dialog.xml  ai_assistant_card.xml  album_dialog.xml  album_item.xml  browser_activity.xml  browser_fragment.xml  chat_ai_item.xml  chat_content.xml  chat_fragment.xml  chat_user_item.xml  clock_activity.xml  copy_activity.xml  copy_dialog.xml  copy_fragment.xml  copy_item.xml  copy_popup.xml  crash_activity.xml  date_dialog.xml  dialog_activity.xml  (+79 more)
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
myapplication2/: BEAUTIFICATION_SUMMARY.md  MainActivity.kt
myapplication2/ui/: BeautifulButtons.kt  CommonComponents.kt  FamilyMonitoringComponents.kt  HealthCenterComponents.kt  HealthHomeScreen.kt  MobileHealthAssistantComponents.kt  NavigationComponents.kt  README_COMPONENT_REFACTORING.md
myapplication2/ui/theme/: Color.kt
(+163 files in other folders)
